--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,15 +10,26 @@ main {
     gap: 5px;
 }
 
-.row {
+.field-row-element {
     display: flex;
     gap: 5px;
 }
 
-.cell {
+.field-cell-element {
     border: 2px solid;
     width: 50px;
     height: 50px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
 
+.field-cell-element_default {
+    box-shadow: inset 0 0 20px 8px #bcbcbc;
+}
+
+.field-cell-element_active {
+    box-shadow: none;
+}
