--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,8 +17,8 @@ main {
 
 .field-cell-element {
     border: 2px solid;
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -32,4 +32,5 @@ main {
 
 .field-cell-element_active {
     box-shadow: none;
+    color: #44c23c;
 }
