--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,23 @@
+@import "form.css";
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
 main {
-    padding: 100px 0;
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 #container {
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 5px;
 }
